--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,6 @@ sbin_PROGRAMS = haveged
 AM_CFLAGS=-Wall
 AM_CPPFLAGS = @HA_CPPFLAGS@
 
-haveged_SOURCES = haveged.c havege.c havegedef.h haveged.h havege.h oneiteration.h loopbody.h
+haveged_SOURCES = haveged.c havege.c havegecollect.c haveged.h havege.h havegecollect.h oneiteration.h
 
 MAINTAINERCLEANFILES = Makefile.in
