--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: haveged
 Section: misc
 Priority: extra
 Maintainer: Steve Kostecke <steve@debian.org>
-Build-Depends: debhelper (>= 7), autotools-dev, gcc-4.3
+Build-Depends: debhelper (>= 7), autotools-dev
 Standards-Version: 3.8.3
 Homepage: http://www.issihosts.com/haveged/
 
