--- a/debian/rules
+++ b/debian/rules
@@ -20,11 +20,6 @@ else
 CROSS= --build $(DEB_BUILD_GNU_TYPE)
 endif
 
-# gcc-4.4 is a problem.
-export CC=/usr/bin/gcc-4.3
-
-CFLAGS='-O0'
-
 config.status: configure
 	dh_testdir
 	# Add here commands to configure the package.
@@ -34,7 +29,7 @@ endif
 ifneq "$(wildcard /usr/share/misc/config.guess)" ""
 	cp -f /usr/share/misc/config.guess config.guess
 endif
-	./configure $(CROSS) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CFLAGS=$(CFLAGS) LDFLAGS="-Wl,-z,defs" 
+	./configure $(CROSS) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs"
 
 
 build: build-stamp
