Fix haveged casing in extended description

--- a/debian/control
+++ b/debian/control
@@ -10,12 +10,12 @@ Package: haveged
 Architecture: any
 Depends: lsb-base (>= 3.2-14), ${shlibs:Depends}, ${misc:Depends}
 Description: Linux entropy source using the HAVEGE algorithm
- Haveged is a userspace entropy daemon which is not dependent upon the
+ haveged is a userspace entropy daemon which is not dependent upon the
  standard mechanisms for harvesting randomness for the system entropy
  pool. This is important in systems with high entropy needs or limited
  user interaction (e.g. headless servers).
  .
- Haveged uses HAVEGE (HArdware Volatile Entropy Gathering and Expansion)
+ haveged uses HAVEGE (HArdware Volatile Entropy Gathering and Expansion)
  to maintain a 1M pool of random bytes used to fill /dev/random
  whenever the supply of random bits in dev/random falls below the low
  water mark of the device. The principle inputs to havaged are the
