--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: haveged
 Section: misc
 Priority: extra
-Maintainer: Steve Kostecke <steve@debian.org>
+Maintainer: Jérémy Bobbio <lunar@debian.org>
 Build-Depends: debhelper (>= 7.0.50~), dh-autoreconf
 Standards-Version: 3.9.2
 Homepage: http://www.issihosts.com/haveged/
