--- a/debian/control
+++ b/debian/control
@@ -20,11 +20,7 @@ Description: Linux entropy source using the HAVEGE algorithm
  haveged uses HAVEGE (HArdware Volatile Entropy Gathering and Expansion)
  to maintain a 1M pool of random bytes used to fill /dev/random
  whenever the supply of random bits in dev/random falls below the low
- water mark of the device. The principle inputs to havaged are the
- sizes of the processor instruction and data caches used to setup the
- HAVEGE collector. The haveged default is a 4kb data cache and a 16kb
- instruction cache. On machines with a cpuid instruction, haveged will
- attempt to select appropriate values from internal tables.
+ water mark of the device.
  .
  More information about HAVAGE is available at
  http://www.irisa.fr/caps/projects/hipsor/
