--- a/Makefile.am
+++ b/Makefile.am
@@ -3,15 +3,18 @@
 # checks to perform is a autoconf substitution
 check_SCRIPTS = @HA_CHECK@
 
+if DAEMON
 # startup script
 initdir       = /etc/init.d
-init_SCRIPTS  = init.d/haveged
+init_SCRIPTS  = init.d/haveged init.d/haveged_fedora
+endif
 
 # Files to be included in distribution
-EXTRA_DIST    = haveged.spec ent/test.sh ent/entitle.gif init.d/haveged nist/test.sh \
-                nist/template9 contrib/fedora12/fix_initrddir_path.patch \
+EXTRA_DIST    = haveged.spec ent/test.sh ent/entitle.gif init.d/haveged init.d/haveged_fedora \
+                nist/test.sh nist/template9 contrib/fedora12/fix_initrddir_path.patch \
                 contrib/fedora12/fix_sbin_install_location.patch \
-                contrib/fedora12/haveged.spec contrib/fedora12/README
+                contrib/fedora12/haveged.spec contrib/fedora12/README \
+		contrib/haveged_fedora
 
 # Scripts run as check target
 EXTRA_SCRIPTS = ent/test.sh nist/test.sh
