--- a/ent/Makefile.in
+++ b/ent/Makefile.in
@@ -82,7 +82,8 @@ EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 GREP = @GREP@
 HA_CHECK = @HA_CHECK@
-HA_CPPFLAGS = @HA_CPPFLAGS@
+HA_DISTRO = @HA_DISTRO@
+HA_LDFLAGS = @HA_LDFLAGS@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
