--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,10 @@
 sbin_PROGRAMS = haveged
 
-AM_CFLAGS=-Wall
-AM_CPPFLAGS = @HA_CPPFLAGS@
+AM_CFLAGS=-Wall -I..
 
-haveged_SOURCES = haveged.c havege.c havegecollect.c cpuid-43.h haveged.h havege.h havegecollect.h oneiteration.h
+haveged_SOURCES = haveged.c havege.c havegetune.c havegecollect.c \
+                  cpuid-43.h haveged.h havege.h havegecollect.h oneiteration.h
+
+haveged_LDADD = @HA_LDFLAGS@
 
 MAINTAINERCLEANFILES = Makefile.in
