--- a/config.h.in
+++ b/config.h.in
@@ -1,5 +1,8 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* Define to 1 if you have the `clock_gettime' function. */
+#undef HAVE_CLOCK_GETTIME
+
 /* Define to 1 if you have the <cpuid.h> header file. */
 #undef HAVE_CPUID_H
 
@@ -14,6 +17,27 @@
 
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
+
+/* Define generic host */
+#undef HAVE_ISA_GENERIC
+
+/* Define to 1 for ia64 */
+#undef HAVE_ISA_IA64
+
+/* Define to 1 for ppc */
+#undef HAVE_ISA_PPC
+
+/* Define to 1 for s390 */
+#undef HAVE_ISA_S390
+
+/* Define to 1 for sparc */
+#undef HAVE_ISA_SPARC
+
+/* Define to 1 for sparclite */
+#undef HAVE_ISA_SPARCLITE
+
+/* Define to 1 for x86 */
+#undef HAVE_ISA_X86
 
 /* Define to 1 if you have the <linux/random.h> header file. */
 #undef HAVE_LINUX_RANDOM_H
@@ -31,8 +55,17 @@
 /* Define to 1 if you have the `pow' function. */
 #undef HAVE_POW
 
+/* Define to 1 if you have the <sched.h> header file. */
+#undef HAVE_SCHED_H
+
+/* Define to 1 if you have the `sched_yield' function. */
+#undef HAVE_SCHED_YIELD
+
 /* Define to 1 if you have the `select' function. */
 #undef HAVE_SELECT
+
+/* Define to 1 if you have the <semaphore.h> header file. */
+#undef HAVE_SEMAPHORE_H
 
 /* Define to 1 if you have the `sqrt' function. */
 #undef HAVE_SQRT
@@ -55,6 +88,9 @@
 /* Define to 1 if you have the <sys/ioctl.h> header file. */
 #undef HAVE_SYS_IOCTL_H
 
+/* Define to 1 if you have the <sys/mman.h> header file. */
+#undef HAVE_SYS_MMAN_H
+
 /* Define to 1 if you have the <sys/select.h> header file. */
 #undef HAVE_SYS_SELECT_H
 
@@ -70,14 +106,26 @@
 /* Define to 1 if you have the <sys/types.h> header file. */
 #undef HAVE_SYS_TYPES_H
 
-/* Define to 1 if you have <sys/wait.h> that is POSIX.1 compatible. */
+/* Define to 1 if you have the <sys/wait.h> header file. */
 #undef HAVE_SYS_WAIT_H
+
+/* Define to 1 if you have the <time.h> header file. */
+#undef HAVE_TIME_H
 
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
 /* Define to 1 if you have the <x86intrin.h> header file. */
 #undef HAVE_X86INTRIN_H
+
+/* Define to 1 if you have the `__rdtsc' function. */
+#undef HAVE___RDTSC
+
+/* Define to 1 to supress daemon interface */
+#undef NO_DAEMON
+
+/* Define to single collection thread */
+#undef NUMBER_CORES
 
 /* Name of package */
 #undef PACKAGE
@@ -99,6 +147,12 @@
 
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
+
+/* Define to 1 for injection diagnostic */
+#undef RAW_IN_ENABLE
+
+/* Define to 1 for capture diagnostic */
+#undef RAW_OUT_ENABLE
 
 /* Define as the return type of signal handlers (`int' or `void'). */
 #undef RETSIGTYPE
