--- a/init.d/lsb.in
+++ b/init.d/lsb.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 #
-# Copyright 2011 Jirka Hladky hladky_dot_jiri_at_gmail_com
-# Copyright 2009-2011 Gary Wuertz gary@issiweb.com
+# Copyright 2011-2012 Jirka Hladky hladky_dot_jiri_at_gmail_com
+# Copyright 2011-2012 Gary Wuertz gary@issiweb.com
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -24,19 +24,21 @@
 # processname: haveged
 #
 # source function library
-. /etc/init.d/functions
 
-RETVAL=0
+. /lib/lsb/init-functions
+
 prog="haveged"
-LOCKFILE=/var/lock/subsys/$prog
 
-HAVEGED_BIN=/usr/sbin/haveged
-test -x ${HAVEGED_BIN} || { echo "Cannot find haveged executable at /usr/sbin" 1>&2 ; exit 5 ; }
+HAVEGED_BIN=/usr/local/sbin/haveged
+LOCKFILE=/var/lock/$prog
+RETVAL=0
+
+test -x ${HAVEGED_BIN} || { echo "Cannot find haveged executable ${HAVEGED_BIN}" 1>&2 ; exit 5 ; }
 
 case "$1" in
 start)
   echo -n $"Starting $prog: "
-  ${HAVEGED_BIN} -w 1024 -v 1 && success || failure
+  ${HAVEGED_BIN} -w 1024 -v 1 && log_success_msg || log_failure_msg
   RETVAL=$?
   [ "$RETVAL" = 0 ] && touch ${LOCKFILE}
   echo
@@ -45,9 +47,9 @@ start)
 stop)
   echo -n $"Stopping $prog: "
   if [ -e /var/run/$prog.pid ]; then
-    kill `cat /var/run/$prog.pid` && success || failure
+    kill `cat /var/run/$prog.pid` && log_success_msg || log_failure_msg
   else
-    failure
+    log_failure_msg
   fi
   RETVAL=$?
   [ "$RETVAL" = 0 ] && rm -f ${LOCKFILE}
