--- a/debian/rules
+++ b/debian/rules
@@ -4,4 +4,11 @@
 	dh --with autoreconf $@
 
 override_dh_auto_configure:
-	dh_auto_configure -- --enable-nistest=yes
+	case $$(dpkg --print-architecture) in \
+	    mips*) \
+		dh_auto_configure -- --enable-nistest=no; \
+		;; \
+	    *) \
+		dh_auto_configure -- --enable-nistest=yes; \
+		;; \
+	esac
